infrastructure/backend/ecs.tf
resource "aws_ecs_cluster" "main" {
  name = "taskList_Cluter"
}

resource "aws_ecs_task_definition" "ecs_taskDef" {
  family                   = "tasklist_taskDef"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = "1024"
  memory                   = "3072"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn


  container_definitions = jsonencode([
    {
      name      = "app"
      # image     = "ayush2832/strapi3:v5"
      image = "ayush2832/task-list-backend:latest"
      essential = true
      portMappings = [
        {
          containerPort = 8080
          hostPort      = 8080
        }
      ]
      environment = [
        {
          name  = "PORT"
          value = "8080"
        },
        {
          name  = "ALLOWED_ORIGIN"
          value = var.frontend_url
        }
      ]

      secrets = [
        {
          name      = "DATABASE_URL"
          valueFrom = "${aws_secretsmanager_secret.tasklist.arn}:DATABASE_URL::"
        }
      ]

    }
  ])
}


resource "aws_ecs_service" "strapi" {
  name            = "taskList_Service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.ecs_taskDef.arn
  launch_type     = "FARGATE"
  desired_count   = 1

  network_configuration {
    subnets         = data.aws_subnets.priv_subnet.ids
    security_groups = [aws_security_group.ecs_sg.id]
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.app.arn
    container_name   = "app"
    container_port   = 8080
  }

  deployment_controller {
    type = "CODE_DEPLOY"
  }

  depends_on = [aws_lb_listener.https]

}
